--- a/ToskanaApp/TableDishPage.xaml
+++ b/ToskanaApp/TableDishPage.xaml
@@ -12,11 +12,15 @@
         <Label Content="Блюда" FontSize="24" FontWeight="DemiBold" Margin="5" HorizontalAlignment="Center"/>
         <StackPanel  Margin="10" HorizontalAlignment="Center" Orientation="Horizontal" >
             <TextBlock VerticalAlignment="Center">Поиск:</TextBlock>
-            <TextBox Width="300" TextChanged="TextBox_TextChanged"/>
+            <TextBox Width="300" x:Name="tBox" TextChanged="TextBox_TextChanged"/>
             <Button x:Name="btnReset" Content="Сбросить" Margin="20,0,0,0" Click="btnReset_Click"/>
         </StackPanel>
         <DataGrid Height="300" x:Name="dataGrid">
-
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Название" Binding="{Binding Items.Name}" Width="3*"></DataGridTextColumn>
+                <DataGridTextColumn Header="Описание" Binding="{Binding DateOfReceipt}" Width="3*"></DataGridTextColumn>
+                <DataGridTextColumn Header="Колорийность" Binding="{Binding Items.Name}" Width="3*"></DataGridTextColumn>
+             </DataGrid.Columns>
         </DataGrid>
         <StackPanel  Margin="10,5,10,0" HorizontalAlignment="Left" Orientation="Horizontal" >
             <Button x:Name="btnBack" Content="Назад" Margin="10,2,20,2" Click="btnBack_Click" />
