--- a/ToskanaApp/EditOrderPage.xaml
+++ b/ToskanaApp/EditOrderPage.xaml
@@ -9,15 +9,17 @@
       Title="EditOrderPage" Loaded="Page_Loaded">
 
     <StackPanel Orientation="Vertical" HorizontalAlignment="Center">
-        <Label Content="Редактирование блюда" FontSize="24" FontWeight="DemiBold" Margin="5" HorizontalAlignment="Center"/>
+        <Label Content="Редактирование обеда" FontSize="24" FontWeight="DemiBold" Margin="5" HorizontalAlignment="Center"/>
 
         <StackPanel Orientation="Vertical" Width="400" Margin="5,50,5,5">
-            <TextBlock Margin="5,10,0,0">Название:</TextBlock>
-            <TextBox Margin="2" x:Name="N1"/>
-            <TextBlock Margin="5,10,0,0">Описание:</TextBlock>
-            <TextBox Margin="2" x:Name="N2" Height="130" MinLines="10"/>
-            <TextBlock Margin="5,10,0,0">Каллорийность:</TextBlock>
+            <TextBlock Margin="5,10,0,0">Блюдо:</TextBlock>
+            <ComboBox Margin="2" x:Name="N1"/>
+            <TextBlock Margin="5,10,0,0">Дата:</TextBlock>
+            <DatePicker Margin="2" x:Name="N2"/>
+            <TextBlock Margin="5,10,0,0">Кол-во:</TextBlock>
             <TextBox Margin="2" x:Name="N3"/>
+            <TextBlock Margin="5,10,0,0">Повар:</TextBlock>
+            <ComboBox Margin="2" x:Name="N4"/>
 
 
 
