--- a/ToskanaApp/TableIngredientPage.xaml
+++ b/ToskanaApp/TableIngredientPage.xaml
@@ -15,15 +15,15 @@
             <TextBox Width="300" x:Name="tBox" TextChanged="TextBox_TextChanged"/>
             <Button x:Name="btnReset" Content="Сбросить" Margin="20,0,0,0" Click="btnReset_Click"/>
         </StackPanel>
-        <DataGrid Height="300" x:Name="dataGrid" AutoGenerateColumns="False">
+        <DataGrid Height="300" x:Name="dataGrid" AutoGenerateColumns="False" IsReadOnly="True" CanUserAddRows="False">
             <DataGrid.Columns>
-            <DataGridTextColumn Header="Наименование" Binding="{Binding Items.Name}" Width="3*"></DataGridTextColumn>
-            <DataGridTextColumn Header="Еденицы имерения" Binding="{Binding DateOfReceipt}" Width="3*"></DataGridTextColumn>
+            <DataGridTextColumn Header="Наименование" Binding="{Binding Name}" Width="3*"></DataGridTextColumn>
+            <DataGridTextColumn Header="Еденицы имерения" Binding="{Binding Unit.Name}" Width="3*"></DataGridTextColumn>
             <DataGridTemplateColumn Header="Изображение"  Width="3*"
                                                         IsReadOnly="True">
                 <DataGridTemplateColumn.CellTemplate>
                     <DataTemplate>
-                        <Image Source="{Binding Items.Image}" Width="100" Height="100"/>
+                        <Image Source="{Binding Image}" Width="100" Height="100"/>
                     </DataTemplate>
                 </DataGridTemplateColumn.CellTemplate>
             </DataGridTemplateColumn>
