--- a/ToskanaApp/EditDishPage.xaml
+++ b/ToskanaApp/EditDishPage.xaml
@@ -20,15 +20,37 @@
 
                 <TextBlock  HorizontalAlignment="Left" Margin="10,10,0,0">Калорийность:</TextBlock>
                 <TextBox x:Name="B3" Width="300" HorizontalAlignment="Left" Margin="5,0,0,0"/>
-                <DataGrid x:Name="dataGrid1" Height="130"  Margin="5,10,0,0" Width="293">
-
+                <DataGrid x:Name="dataGrid1" Height="130"  Margin="5,10,0,0" Width="300" AutoGenerateColumns="False" IsReadOnly="True" CanUserAddRows="False">
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="Наименование" Binding="{Binding Ingredient.Name}" Width="3*"></DataGridTextColumn>
+                        <DataGridTextColumn Header="Еденицы имерения" Binding="{Binding Ingredient.Unit.Name}" Width="3*"></DataGridTextColumn>
+                        <DataGridTemplateColumn Header="Изображение"  Width="3*"
+                                                        IsReadOnly="True">
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <Image Source="{Binding Ingredient.Image}" Width="25" Height="25"/>
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
+                    </DataGrid.Columns>
                 </DataGrid>
                 <Button x:Name="btnDel" Width="100" Content="Удалить" Margin="5" Click="btnDel_Click"></Button>
             </StackPanel>
             <StackPanel Orientation="Vertical"  Width="375" Margin="3">
                 <Label Content="Ингридиенты" FontSize="18" FontWeight="DemiBold" HorizontalAlignment="Center"/>
-                <DataGrid x:Name="dataGrid2" Height="288" Width="356">
-                    
+                <DataGrid x:Name="dataGrid2" Height="300" Width="356" AutoGenerateColumns="False" IsReadOnly="True" CanUserAddRows="False">
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="Наименование" Binding="{Binding Name}" Width="3*"></DataGridTextColumn>
+                        <DataGridTextColumn Header="Еденицы имерения" Binding="{Binding Unit.Name}" Width="3*"></DataGridTextColumn>
+                        <DataGridTemplateColumn Header="Изображение"  Width="3*"
+                                                        IsReadOnly="True">
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <Image Source="{Binding Image}" Width="25" Height="25"/>
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
+                    </DataGrid.Columns>
                 </DataGrid>
                 <TextBlock HorizontalAlignment="Center" Width="200" Margin="10,10,10,0">Кол-во:</TextBlock>
                 <TextBox x:Name="tBoxCount" Margin="10,0,10,5"  Width="200"></TextBox> 
